[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/IconPack/IconPackByAndelRodis/pngonebyone/leftarrow.png" type="Texture" id=1]
[ext_resource path="res://assets/coloring/lvl2.png" type="Texture" id=2]
[ext_resource path="res://assets/coloring/lvl1.png" type="Texture" id=3]
[ext_resource path="res://assets/coloring/lvl3.png" type="Texture" id=4]
[ext_resource path="res://scenes/Nivelescoloreamiento.gd" type="Script" id=5]
[ext_resource path="res://resources/temita.tres" type="Theme" id=6]
[ext_resource path="res://assets/IconPack/IconPackByAndelRodis/pngonebyone/playbuttonpdn.png" type="Texture" id=7]

[node name="NivelesColoreamiento" type="Node2D"]
script = ExtResource( 5 )

[node name="Niveles2" type="Node2D" parent="."]
scale = Vector2( 0.4, 0.4 )

[node name="lvl1" type="TextureButton" parent="Niveles2"]
margin_left = 190.0
margin_top = 742.5
margin_right = 1003.0
margin_bottom = 1203.5
texture_normal = ExtResource( 3 )

[node name="lvl2" type="TextureButton" parent="Niveles2"]
margin_left = 190.0
margin_top = 1352.5
margin_right = 1001.0
margin_bottom = 1810.5
texture_normal = ExtResource( 2 )

[node name="lvl3" type="TextureButton" parent="Niveles2"]
margin_left = 185.0
margin_top = 2005.0
margin_right = 992.0
margin_bottom = 2468.0
texture_normal = ExtResource( 4 )

[node name="Niveles" type="Label" parent="."]
margin_left = 270.0
margin_top = 139.0
margin_right = 393.0
margin_bottom = 182.0
rect_scale = Vector2( 1.5, 1.5 )
theme = ExtResource( 6 )
text = "Niveles"

[node name="1" type="Label" parent="."]
margin_left = 36.0
margin_top = 362.0
margin_right = 56.0
margin_bottom = 405.0
theme = ExtResource( 6 )
text = "1"

[node name="Puntaje Obtenido" type="Label" parent="."]
margin_left = 409.0
margin_top = 305.0
margin_right = 707.0
margin_bottom = 348.0
theme = ExtResource( 6 )
text = "Puntaje obtenido:"

[node name="Puntaje Obtenido2" type="Label" parent="."]
margin_left = 414.0
margin_top = 550.0
margin_right = 712.0
margin_bottom = 593.0
theme = ExtResource( 6 )
text = "Puntaje obtenido:"

[node name="Puntaje Obtenido3" type="Label" parent="."]
margin_left = 416.0
margin_top = 820.0
margin_right = 714.0
margin_bottom = 863.0
theme = ExtResource( 6 )
text = "Puntaje obtenido:"

[node name="2" type="Label" parent="."]
margin_left = 36.0
margin_top = 612.0
margin_right = 56.0
margin_bottom = 655.0
theme = ExtResource( 6 )
text = "2"

[node name="3" type="Label" parent="."]
margin_left = 34.0
margin_top = 859.0
margin_right = 54.0
margin_bottom = 902.0
theme = ExtResource( 6 )
text = "3"

[node name="atras" type="TextureButton" parent="."]
margin_left = 580.0
margin_top = 30.0
margin_right = 1180.0
margin_bottom = 630.0
rect_scale = Vector2( 0.15, 0.15 )
texture_normal = ExtResource( 1 )

[node name="Playbuttons" type="Node2D" parent="."]
scale = Vector2( 0.15, 0.15 )

[node name="play1" type="Sprite" parent="Playbuttons"]
position = Vector2( 1560, 2626.67 )
texture = ExtResource( 7 )

[node name="play2" type="Sprite" parent="Playbuttons"]
position = Vector2( 1540, 4226.67 )
texture = ExtResource( 7 )

[node name="play3" type="Sprite" parent="Playbuttons"]
position = Vector2( 1506.67, 6000 )
texture = ExtResource( 7 )
